--- a/keymanage/src/main/resources/templates/Home/index.html
+++ b/keymanage/src/main/resources/templates/Home/index.html
@@ -415,7 +415,7 @@
 					</li>
 					<!--柜子管理-->
 					<li>
-						<a href="#" data-iframe="map" onclick="changePage(this)">
+						<a href="#" data-iframe="cabinet" onclick="changePage(this)">
 							<i class="menu-icon fa fa-desktop"></i>
 							<span class="menu-text">柜子管理</span>
 						</a>
@@ -435,7 +435,7 @@
 						<ul class="submenu">
 
 							<li id="editpwd" class="">
-								<a href="#" data-iframe="editPsw" onclick="changePage(this)">
+								<a href="#" data-iframe="usercodemanage" onclick="changePage(this)">
 									<i class="menu-icon fa fa-caret-right"></i>
 									修改密码
 								</a>
@@ -444,7 +444,7 @@
 							</li>
 
 							<li id="managerManage" class="">
-								<a href="#" data-iframe="user" onclick="changePage(this)">
+								<a href="#" data-iframe="manager" onclick="changePage(this)">
 									<i class="menu-icon fa fa-caret-right"></i>
 									管理员管理
 								</a>
@@ -453,7 +453,7 @@
 							</li>
 
 							<li id="userManage" class="">
-								<a href="#" data-iframe="user2" onclick="changePage(this)">
+								<a href="#" data-iframe="user" onclick="changePage(this)">
 									<i class="menu-icon fa fa-caret-right"></i>
 									用户管理
 								</a>
@@ -648,16 +648,16 @@
                 if (itemName == "supermanage") {
                     test.src = "/home/supermanage";
                 }
+                else if (itemName == "cabinet") {
+                    test.src = "/home/cabinet";
+                }
+                else if (itemName == "usercodemanage") {
+                    test.src = "/home/usercodemanage";
+                }
                 else if (itemName == "user") {
-                    test.src = '@Url.Content("~/User/UserManage")';
-                }
-                else if (itemName == "user2") {
-                    test.src = '@Url.Content("~/User/UserManage2")';
-                }
-                else if (itemName == "rank") {
-                    test.src = '@Url.Content("~/Rank/GetRank")';
-                } else if (itemName == "editPsw") {
-                    test.src = '@Url.Content("~/User/UserCodeEdit")';
+                    test.src ="/home/user";
+                } else if (itemName == "manager") {
+                    test.src = "/home/manager";
                 } else if (itemName == "editQZ") {
                     test.src = '@Url.Content("~/Rank/RankEdit")';
                 }
