--- a/keymanage/src/main/resources/templates/UserManage/userapply.html
+++ b/keymanage/src/main/resources/templates/UserManage/userapply.html
@@ -52,10 +52,10 @@
     <div class="page-content">
         <div class="page-header">
             <h1>
-                柜子管理
+                人员管理
                 <small>
                     <i class="ace-icon fa fa-angle-double-right"></i>
-                    柜子分配
+                    管理员管理
                 </small>
             </h1>
         </div><!-- /.page-header -->
@@ -64,7 +64,7 @@
             <div class="col-xs-12">
 
 
-                <input type="hidden" th:value="${id}" id="id"/>
+
                 <table id="grid-table"></table>
 
                 <div id="grid-pager"></div>
@@ -113,7 +113,7 @@
 
 <!-- inline scripts related to this page -->
 <script type="text/javascript">
-    var id=$("#id").val();
+
     var grid_data =
         [
             { UserID: "2", Username: "Laptop", Pwd: "Long text ", Email: "Yes", Gender: "InTime", Authority: "2007-12-03" },
@@ -181,14 +181,13 @@
                     ]
                 });
             },
-            url:"/goods/goods/getlist?id="+id,
-            // url: '/User/GetList',
+            url:"/user/getapplylist",
             //  data: grid_data,
-            caption: "柜子列表",
+            caption: "人员列表",
             type: "post",
             datatype: "json",
             height: 300,
-            colNames: [' ', 'ID', 'MAC', '公司','物品名称', '是否需要审批'],
+            colNames: [' ', 'ID', '姓名', '密码','公司','部门','电话', '权限','审批','审批'],
             colModel: [
                 {
                     name: 'myac', index: '', width: 80, fixed: true, sortable: false, resize: false,
@@ -199,23 +198,44 @@
 
                         delOptions: { recreateForm: true, beforeShowForm: beforeDeleteCallback },
                         editformbutton:true, editOptions:{recreateForm: true, beforeShowForm:beforeEditCallback,closeAfterEdit: true , afterComplete: function () {
-                            var url = "/goods/goods/getlist?id="+id;
+                            var url = "/user/getapplylist";
                             //var url = "~/User/GetList2" ;
                             $("#grid-table").jqGrid("setGridParam", { datatype: 'json', page: 1, loadonce: true, url: url }).trigger("reloadGrid");
                         }}
                     }
                 },
-                { name: 'id', index: 'id', width: 60, sortable: true, editable: true, },
+                { name: 'id', index: 'id', width: 60, sortable: true, editable: true, key: true},
                 {
-                    name: 'mac', index: 'mac', width: 60, sortable: true, editable: true, editrules: {
+                    name: 'name', index: 'name', width: 60, sortable: true, editable: true, editrules: {
                     required: true,
                     edithidden: true,
-                    key: true
+
+                }
+                },
+                {
+                    name: 'password', index: 'password', width: 60, sortable: true, editable: true, edittype: "password",
+                    editoptions: { size: "20", maxlength: "30" }, editrules: {
+                    required: true,
+                    edithidden: true,
+
                 }
                 },
                 { name: 'company', index: 'company', width: 60, sortable: true, editable: true },
-                { name: 'name', index: 'name', width: 60, sortable: true, editable: true },
-                { name: 'needApproved', index: 'needApproved', width: 60, sortable: true, editable: true },
+                { name: 'department', index: 'department', width: 60, sortable: true, editable: true },
+                { name: 'phone', index: 'phone', width: 60, sortable: true, editable: true },
+                { name: 'authority', index: 'authority', width: 60, sortable: true, editable: false ,search:false},
+                {
+                    name: 'myac', index: '', width: 50, fixed: true, sortable: false, resize: false,
+                    formatter: function (cellvalue, options, rowObject) {
+                        return " <a  role=\"button\" class=\"blue\"  onclick=\"applypass(" + rowObject.id + ")\">" + "通过" + "</a>";
+                    }
+                },
+                {
+                    name: 'myac', index: '', width: 50, fixed: true, sortable: false, resize: false,
+                    formatter: function (cellvalue, options, rowObject) {
+                        return " <a  role=\"button\" class=\"blue\"  onclick=\"applynotpass(" + rowObject.id + ")\">" + "不通过" + "</a>";
+                    }
+                },
             ],
 
             viewrecords: true,
@@ -243,7 +263,7 @@
             },
 
             //editurl: '/User/ManagerEdit',
-            editurl: "/goods/goods/edit",
+            editurl: "/user/edit",
 
             //,autowidth: true,
 
@@ -314,7 +334,7 @@
                     style_edit_form(form);
                 },
                 closeAfterEdit: true,
-                url: "/goods/goods/edit",
+                url: "/user/edit",
                 // url: '/User/ManagerEdit',
                 mtype: 'POST',
                 closeAfterSubmit: true,
@@ -340,7 +360,7 @@
                     style_edit_form(form);
                 },
                 afterComplete: function () {
-                    var url ="/goods/goods/getlist?id="+id;
+                    var url ="/user/getapplylist";
                     $("#grid-table").jqGrid("setGridParam", { datatype: 'json', page: 1, loadonce: true, url: url }).trigger("reloadGrid");
                 }
             },
@@ -360,8 +380,36 @@
                 // closeAfterDel: true,
                 closeAfterEdit: true,
                 //url: '/User/ManagerEdit',
-                url: "/goods/goods/edit",
+                url: "/user/edit",
                 mtype: 'POST',
+                //  data:  {Userid:celldata},
+                //afterSubmit: function (xhr, postdata) {
+                //    //var selectedRowIds = $("#grid-table").jqGrid("getGridParam", "selarrrow");
+                //    //var len = selectedRowIds.length;
+                //    //var UserId =new Array();
+                //    //for (var i = 0; i <len; i++) {
+                //    //    UserId[i]=datas[selectedRowIds[i]-1].UserId;
+                //    //}
+                //    var rowid = $("#grid-table").jqGrid('getGridParam', 'selrow');
+                //    var celldata=$("#grid-table").jqGrid('getCell',rowid,'UserID');
+                //    //post userId组到后台，让后台删除（PS：这里是我的逻辑实现，我的后台是对userId进行删除的）
+                //    $.ajax({
+                //        type: "post",
+                //        url: "~/User/Delete",
+                //        data: {UserID:celldata},
+                //        dataType: "json",
+                //        success: function (data) {
+                //            //判断后台是否删除成功
+                //            //如果成功则调用jqGrid的delRowData方法逐个删除行id
+                //            if(data.success==1){
+                //                for (var i = 0; i < len; i++) {
+                //                    $("#grid-pager").jqGrid("delRowData", selectedRowIds[0],{reloadAfterSubmit:false});
+                //                }
+                //            }
+                //        }
+                //    });
+
+                //},
                 onClick: function (e) {
                     alert(1);
                 }
@@ -369,7 +417,7 @@
             {
                 //search form
                 // url: '/User/ManagerEdit',
-                url: "/goods/goods/edit",
+                url: "/user/edit",
                 mtype: 'POST',
                 recreateForm: true,
                 afterShowSearch: function (e) {
@@ -397,13 +445,62 @@
                 }
             }
         )
+        //.jqGrid('navButtonAdd',pager_selector,{              //原为).jqgrid
+        //        buttonicon:'icon-globe purple',
+        //        caption:'',
+        //        position:'last',
+        //        title:'查看历史记录',
+        //        onClickButton:function(){
+        //            //获得某行id
+        //            var gr = jQuery("#grid-table").jqGrid('getGridParam', 'selrow');
+        //            //获得某行数据
+        //            var grr = jQuery("#grid-table").jqGrid('getRowData',gr);
+        //            if (gr != null) {
+        //                var diag = new Dialog();
+        //                diag.Width = 600;
+        //                diag.Height = 300;
+        //                diag.Title = "历史数据展示";
+        //                diag.URL = "~/left.html?id="+gr;
+        //                diag.OKEvent = function(){diag.close();};//点击确定后调用的方法
+        //                diag.show();
+
+        //            }
+        //            else alert("Please Select Row");
+
+        //        }
+        //    }).jqGrid('navButtonAdd',pager_selector,{
+        //        buttonicon:'icon-eye-open',
+        //        caption:'',
+        //        position:'last',
+        //        title:'表单验证',
+        //        onClickButton:function(){
+        //            debugger;
+        //            //获得某行id
+        //            var gr = jQuery("#grid-table").jqGrid('getGridParam', 'selrow');
+        //            //获得某行数据
+        //            var grr = jQuery("#grid-table").jqGrid('getRowData',gr);
+        //            if (gr != null) {
+        //                var diag = new Dialog();
+        //                diag.Width = 600;
+        //                diag.Height = 300;
+        //                diag.Title = "表单验证";
+        //                diag.URL = "~/form.html";
+        //                diag.OKEvent = function(){diag.close();};//点击确定后调用的方法
+        //                diag.show();
+
+        //            }
+        //            else alert("Please Select Row");
+
+        //        }
+        //    })
 
         function style_edit_form(form) {
             //enable datepicker on "sdate" field and switches for "stock" field
             form.find('input[name=sdate]').datepicker({ format: 'yyyy-mm-dd', autoclose: true })
 
             form.find('input[name=stock]').addClass('ace ace-switch ace-switch-5').after('<span class="lbl"></span>');
-
+            //don't wrap inside a label element, the checkbox value won't be submitted (POST'ed)
+            //.addClass('ace ace-switch ace-switch-5').wrap('<label class="inline" />').after('<span class="lbl"></span>');
 
 
             //update buttons classes
@@ -522,9 +619,53 @@
             $('.ui-jqdialog').remove();
         });
     });
-    function GoodsConfiguration(id)
+    function applypass(id)
     {
-        window.location.href="/home/rfid?id="+id;
+        var userinfo = {
+            id: id,
+        };
+        var url = "/user/pass";
+        $.ajax({
+            type: 'post',
+            url: url,
+            data: userinfo,
+            success: function (data) {
+                if (data == "ok") {
+                    var url ="/user/getapplylist";
+                    $("#grid-table").jqGrid("setGridParam", { datatype: 'json', page: 1, loadonce: true, url: url }).trigger("reloadGrid");
+                }
+                else {
+                    alert("账户或密码错误");
+                }
+            },
+            error: function () {
+                alert("error");
+            }
+        });
+    }
+    function applynotpass(id)
+    {
+        var userinfo = {
+            id: id,
+        };
+        var url = "/user/notpass";
+        $.ajax({
+            type: 'post',
+            url: url,
+            data: userinfo,
+            success: function (data) {
+                if (data == "ok") {
+                    var url ="/user/getapplylist";
+                    $("#grid-table").jqGrid("setGridParam", { datatype: 'json', page: 1, loadonce: true, url: url }).trigger("reloadGrid");
+                }
+                else {
+                    alert("账户或密码错误");
+                }
+            },
+            error: function () {
+                alert("error");
+            }
+        });
     }
 </script>
 
