--- a/keymanage/src/main/resources/templates/UserManage/userapply.html
+++ b/keymanage/src/main/resources/templates/UserManage/userapply.html
@@ -55,7 +55,7 @@
                 人员管理
                 <small>
                     <i class="ace-icon fa fa-angle-double-right"></i>
-                    管理员管理
+                    人员审批
                 </small>
             </h1>
         </div><!-- /.page-header -->
@@ -183,7 +183,7 @@
             },
             url:"/user/getapplylist",
             //  data: grid_data,
-            caption: "人员列表",
+            caption: "人员申请表",
             type: "post",
             datatype: "json",
             height: 300,
